--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HOME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best html web page building</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-f" style="background-image: url(assets/images/est-squashed-2000x1579-19.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">bootstrap website creator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-f" style="background-image: url(assets/images/est-squashed-2000x1579-19.jpg);">
 
     
 
@@ -209,7 +209,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="iDWpRjhShaBnMRLrUMa+Xt9viCeITKXexpqSMrJioQfLnHW/RaIuN0nMIUBVODj/XLQ2TPfKn51zRVKhcwSiejDSDxlrIu5iQu3pshtxEZAoNVoRZk0dZmGSPO4PsLcl" data-form-email="true">
+                        <input type="hidden" value="CxMc/Mc37jPakqfpeg4ZPRIAvf4Qs12C15nQX72rjg5Dj5lxm2/oNsd198XAlrY43QDaqZ8XUxuUXDTPL0NsEU/2qdB+pzucc18tr0mDwDmIdIEgO68C/UnZ2j2SVZGW" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
