--- a/page1.html
+++ b/page1.html
@@ -33,8 +33,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/ow-backgroundless-132x128-56.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">O.W. ANDERSON</a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/ow-backgroundless-132x128-56.png" alt="Mobirise"></a>
+                        <a class="navbar-caption" href="index.html">O.W. ANDERSON</a>
                     </div>
 
                 </div>
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HOME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HOME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts1-7">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top responsive web site maker</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-l" style="background-image: url(assets/images/sky.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop web page generator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-l" style="background-image: url(assets/images/sky.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);">
     </div>
@@ -126,16 +126,15 @@
                 <div><img src="assets/images/owa-2-gold-and-silver-128x123-85.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Address</strong><br>Ö Boulevarden 44, Kristianstad.<br>www.owaoptik.se</p>
+                <p><strong>Adress</strong><br>Ö Boulevarden 44, Kristianstad.<br>www.owaoptik.se</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Contacts</strong><br>
-Email: info@owaoptik.se<br>
+                <p><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Kontakt</strong></span></font><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong><br></strong></span></font>Email: info@owaoptik.se<br>
 Phone: 044 21 38 49<br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p></p><p><strong>Links</strong><br>
-<a href="www.voltgroup.com.mx">Site made by Volt Group</a><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip"></a></p><p></p>
+                <p></p><p><strong>Länkar</strong><br>
+<a href="http://www.voltgroup.com.mx" target="_blank">Site made by Volt Group</a><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip"></a></p><p></p>
             </div>
 
         </div>
