--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-f" style="background-image: url(assets/images/est-squashed-2000x1579-19.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-f" style="background-image: url(assets/images/est-squashed-2000x1579-19.jpg);">
 
     
 
@@ -292,7 +292,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Kontakta oss">
 
-                        <input type="hidden" value="EquNt0ScZKKg+72fd6Fotjpe7qJuKo4zgRMwBFoOU5nWxMiPuHJFJTW6TkYsQ1svMek9xxIu/0M87uMrTALaz2dMx0xUyealgEfhwxQHdO4BV1TCokHki5c2M9g60T6r" data-form-email="true">
+                        <input type="hidden" value="z/EbcAk5dThSM5ZgCoDMPm6FQvavkdLfqFGN6cwifzkFAUDcsw7MUQzG9De/pBsHkyzMUyAnPwtbp5M/1+JVbsWkc2Bc1hS9bGP2aIaThskSf65CZTJQP1CpH7NAeBm6" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
