create github pages

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#top">HEM</a></li><li class="nav-item"><a class="nav-link link" href="index.html#slider-s">TJÄNSTER</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-6">KONTAKTA<br></a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ<br></a></li><li class="nav-item"><a class="nav-link link" href="index.html#map1-1h">LOKALISERING</a></li><li class="nav-item"><a class="nav-link link" href="index.html#social-buttons2-5">FÖLJ OSS</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#top">HEM</a></li><li class="nav-item"><a class="nav-link link" href="index.html#slider-s">TJÄNSTER</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-6">KONTAKTA<br></a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ<br></a></li><li class="nav-item"><a class="nav-link link" href="index.html#map1-1h">HITTA OSS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#social-buttons2-5">FÖLJ OSS</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-f" style="background-image: url(assets/images/est-squashed-2000x1579-19.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-f" style="background-image: url(assets/images/est-squashed-2000x1579-19.jpg);">
 
     
 
@@ -292,7 +292,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Kontakta oss">
 
-                        <input type="hidden" value="WAmfTpAZvzGBV2THLR/AbXaSHeMsZ5fb7xXoKtTXZMk4JZVc0oGQcz4He/Pkrildzuhe6BS1wg9VT99NcXi/ITYz4mw7Moj16p8SjcGZeIN9Pp34JzcUOiNgMF6pullV" data-form-email="true">
+                        <input type="hidden" value="ppCRBdtdXy+ZC5wrFQzeVJmXWjBX4ZH+t//DZCzGxQ+Zdf8PWadnAntHgqiIXX9fzWH9wJWpzbg8ypB3zC9RAPKFmCB4AmNjtIuerMrINIIAP9cCExKVxvp3ppxKVFLx" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -356,7 +356,7 @@
                         <p><strong>&nbsp;ADRESS</strong><br>Ö Boulevarden 44, Kristianstad<br><br><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>KONTAKTA</strong></span></font><br>E-post: info@owaoptik.se<br>
 Phone: 044 21 38 49<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>ÖPPETIDER</strong></p><ul class="mbr-contacts__list"><li><a class="text-white" href="https://mobirise.com/">M</a>ån - Fre 10-18</li><li><a class="text-white" href="https://mobirise.com/mobirise-free-win.zip">L</a>ör 10-14</li><br></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>ÖPPETIDER</strong></p><ul class="mbr-contacts__list"><li>Mån - Fre 10-18</li><li>Lör 10-14</li><br></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -364,7 +364,7 @@ Phone: 044 21 38 49<br><br></p>
                     <div hidden="" data-form-alert-success="true">Tack för att ditt meddelande, vi återkommer så fort vi kan till dig!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="wUZUrZ5jx27DveDwawEyKMDcOghAqnhwpGYZDa/bLuHh7rlCNfmvKZdhnkEZxHvohPhTXeUPPTqtvs6pm5srA+P3FhJQbA1MemOpJjDdY+t+drjBtLKatEHGqxDSoovm" data-form-email="true">
+                    <input type="hidden" value="kPL1rIkovJnBx3uVV9Pu+mGXBVec5MxXbnGa9JFxZ822FmQ0aakYRHnj8a2A1POC0hAhQTgjtQ2SaHQjrivAH1bfusNVJO+FHuOn/hJw6bMjxXiQ+0ro8PQHUf4O4hbA" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-1i-email">E-post<span class="form-asterisk">*</span></label>
@@ -375,7 +375,7 @@ Phone: 044 21 38 49<br><br></p>
                         <label class="form-control-label" for="contacts4-1i-message">Meddelande</label>
                         <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="4" id="contacts4-1i-message"></textarea>
                     </div>
-                    <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-black">Sckika</button></div>
+                    <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-black">Skicka</button></div>
                 </form>
             </div>
         </div>
