--- a/page1.html
+++ b/page1.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#top">HEM</a></li><li class="nav-item"><a class="nav-link link" href="index.html#slider-s">TJÄNSTER</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-6">KONTAKTA<br></a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ<br></a></li><li class="nav-item"><a class="nav-link link" href="index.html#map1-1h">LOKALISERING</a></li><li class="nav-item"><a class="nav-link link" href="index.html#social-buttons2-5">FÖLJ OSS</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#top">HEM</a></li><li class="nav-item"><a class="nav-link link" href="index.html#slider-s">TJÄNSTER</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-6">KONTAKTA<br></a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ<br></a></li><li class="nav-item"><a class="nav-link link" href="index.html#map1-1h">HITTA OSS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#social-buttons2-5">FÖLJ OSS</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-l" style="background-image: url(assets/images/est-squashed-2000x1579.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-l" style="background-image: url(assets/images/est-squashed-2000x1579.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);">
     </div>
