create github pages

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-f" style="background-image: url(assets/images/est-squashed-2000x1579-19.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-f" style="background-image: url(assets/images/est-squashed-2000x1579-19.jpg);">
 
     
 
@@ -221,7 +221,7 @@
 
                   </div>
 
-                  <div><a class="btn btn-primary" href="https://mobirise.com">Kontakta oss</a></div>
+                  <div><a class="btn btn-primary" href="index.html#form1-6">Kontakta oss</a></div>
               </div>
 
 
@@ -292,7 +292,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Kontakta oss">
 
-                        <input type="hidden" value="ppCRBdtdXy+ZC5wrFQzeVJmXWjBX4ZH+t//DZCzGxQ+Zdf8PWadnAntHgqiIXX9fzWH9wJWpzbg8ypB3zC9RAPKFmCB4AmNjtIuerMrINIIAP9cCExKVxvp3ppxKVFLx" data-form-email="true">
+                        <input type="hidden" value="oThIWl+dRwou+bonvgCyMT5YBnU7RrT0OgHuwAaC6Wbi5i1GEL7rW+eBndc4jJCF/9MlbNLDgmjOm5MxFDLGyUhPTUiaJx9hM6Wq2WUsRdPEYp2XrWaGQJK9UwaHtac+" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -364,7 +364,7 @@ Phone: 044 21 38 49<br><br></p>
                     <div hidden="" data-form-alert-success="true">Tack för att ditt meddelande, vi återkommer så fort vi kan till dig!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="kPL1rIkovJnBx3uVV9Pu+mGXBVec5MxXbnGa9JFxZ822FmQ0aakYRHnj8a2A1POC0hAhQTgjtQ2SaHQjrivAH1bfusNVJO+FHuOn/hJw6bMjxXiQ+0ro8PQHUf4O4hbA" data-form-email="true">
+                    <input type="hidden" value="Rmq9MUTRn6ZvHTWxWxU6qNWONiIOYmfSK0NGpnw+k0WOvuM4AghwXJ6jogMD5KnHZ4lLU9iuZdIiRLn3rnUFlJyJYRjQqqYwlm29+gJD73iGM4we6lH2CVrGJXAjYrv/" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-1i-email">E-post<span class="form-asterisk">*</span></label>
